compiler/crates/graphql-ir/tests/parse/fixtures/literal-list-argument.invalid.expected
==================================== INPUT ====================================
# expected-to-throw
query LiteralListArgumentQuery1 {
  route(
    waypoints: [
      {
        lat: 0.0 # error: float not string
        lon: "0.0"
      }
    ]
  ) {
    steps {
      note
    }
  }
}

query LiteralListArgumentQuery2 {
  route(waypoints: ["waypoint"]) {
    # error: string not input object
    steps {
      note
    }
  }
}

query LiteralListArgumentQuery3 {
  route(waypoints: "waypoint") {
    # error: string not list
    steps {
      note
    }
  }
}
==================================== ERROR ====================================
[31m✖︎ Expected a value of type 'String'[0m

  [4mliteral-list-argument.invalid.graphql[0m[2m:6:14[0m
[1m    5 │ [0m      {
    6 │         lat: [31m0[0m[31m.[0m[31m0[0m # error: float not string
      │              ^^^
    7 │         lon: "0.0"


[31m✖︎ Expected a value of type 'WayPoint'[0m

  [4mliteral-list-argument.invalid.graphql[0m[2m:18:21[0m
[1m   17 │ [0mquery LiteralListArgumentQuery2 {
   18 │   route(waypoints: ["waypoint"]) {
      │                     ^^^^^^^^^^
   19 │     # error: string not input object


✖︎ Expected a value of type 'WayPoint'

  literal-list-argument.invalid.graphql:27:20
   26 │ query LiteralListArgumentQuery3 {
   27 │   route(waypoints: "waypoint") {
      │                    ^^^^^^^^^^
   28 │     # error: string not list
